<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KotSystem</string>
    <string name="spinner_title">Select Branch</string>
    <string name="spinner_title_business">Select Business</string>
    <string name="purchase" tools:ignore="ExtraTranslation">Purchase</string>
    <string name="Select_Supplier">Select Supplier</string>
    <string name="add_purchase_details">ENTER PURCHASE DETAILS</string>
    <string name="date_of_purchase">Select date of purchase</string>
    <string name="description">Description</string>
    <string name="amount">amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="add_suplier">Add Supplier</string>
    <string name="Suplier_name">Name</string>
    <string name="Suplier_address">Address</string>
    <string name="Suplier_contact">Contact</string>
    <string name="Add_buton">Add</string>
    <string name="item_removed_message">Enter supplier name</string>
    <string name="login_failed">Login Failed</string>
    <string name="please_rate_the_food_to_make_us_improve_better">Please rate the food to make us improve better</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="Balance">Balance :</string>
    <string name="rsicon"> ₹ </string>
    <string name="salesicon">salesicon</string>
    <string name="manage_cafe">Manage Café</string>
    <string name="Inventory">Inventory</string>
    <string name="add_employee">Add\nemployee</string>
    <string name="take_attendance">Manage\nAttendance</string>
    <string name="manage_category">Manage\nCategory</string>
    <string name="manage_item">Manage\nItem</string>
    <string name="manage_supplier">Manage\nSupplier</string>
    <string name="manage_purchase">Manage\nPurchase</string>
    <string name="manage_sales">Manage\nSales</string>
    <string name="manage_salary">Manage\nSalary</string>
    <string name="manage_feedback">Manage\nFeedback</string>
    <string name="manage_expense">Manage\nExpense</string>
    <string name="manage_stocks">Manage Daily \n Stocks</string>
    <string name="_1000k">1000k</string>
    <string name="today_s_purchase">Today\'s Purchase</string>
    <string name="_3245k">3245k</string>
    <string name="today_s_sales">Today\'s Sales</string>
    <string name="todo">TODO</string>
    <string name="value">2500k</string>
    <string name="expense_type">Select expense type</string>
    <string name="date">Select date</string>
    <string name="add_expense">Add Expense</string>
    <string name="cancel">Cancel</string>
    <string name="manage_employee">Manage\nEmployee</string>
    <string name="emp_name">Emplolyee Name</string>
    <string name="emp_address">Emplolyee Address</string>
    <string name="emp_desig">Select employee designation</string>
    <string name="emp_doj">Select date of join</string>
    <string name="emp_salary">Salary</string>
    <string name="add_emp">Add employee</string>
    <string name="dine_in">Dine in</string>
    <string name="take_away">Take away</string>
    <string name="Settings">Settings</string>

    <string name="bill_no">Bill no :</string>
    <string name="fdate">Date:</string>
    <string name="billnumber">Bill no:</string>
    <string name="ratings">Ratings</string>
    <string name="cafe_ambience">Cafe Ambience</string>
    <string name="feedback">" \"Good atmosphere\"</string>
    <string name="cafe_service">Cafe Service</string>
    <string name="cafe_food">Cafe Food</string>

    <string name="select_employee">select employee</string>
    <string name="select_salary_date">Select salary date</string>
    <string name="submit">submit</string>
    <string name="paying_amount">paying amount</string>
    <string name="type_of_pay">select type of payment</string>
    <string name="next">next</string>
    <string name="enter_password">Enter Manager Password</string>
    <string name="select">Select and continue</string>
    <string name="Customers">Customers</string>


</resources>
