<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"

        app:ignore="NamespaceTypo"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/emp_name"
                android:imeOptions="flagNoExtractUi" />

            <EditText
                android:id="@+id/emp_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/emp_address"
                android:imeOptions="flagNoExtractUi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/emp_desig"
                android:textAlignment="textStart" />

            <Spinner
                android:id="@+id/emp_desig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:padding="20dp"
                android:spinnerMode="dialog">

            </Spinner>


            <TextView
                android:id="@+id/emp_doj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white_button"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat"
                android:padding="5dp"
                android:text="@string/emp_doj"
                android:textAlignment="textStart" />


            <EditText
                android:id="@+id/emp_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/emp_salary"
                android:imeOptions="flagNoExtractUi" />

            <EditText
                android:id="@+id/emp_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/Suplier_contact"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLines="1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white_button"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/add_emp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white_button"
                    android:text="@string/add_emp" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>