<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"

        app:ignore="NamespaceTypo"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat"
                android:text="@string/expense_type"/>



            <Spinner
                android:id="@+id/exp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:padding="20dp"
                android:completionThreshold="1">

            </Spinner>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/exp_date"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:background="@color/white_button"
                android:layout_marginTop="5dp"
                android:textAlignment="textStart"
                android:padding="5dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/date"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:id="@+id/exp_description"
                android:imeOptions="flagNoExtractUi"
                android:hint="@string/description"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="flagNoExtractUi"
                android:id="@+id/exp_amount"
                android:fontFamily="@font/montserrat"
                android:hint="@string/amount"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_alignParentBottom="true"
                android:weightSum="2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white_button"
                    android:text="@string/cancel"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/add_expense"
                    android:background="@color/white_button"
                    android:text="@string/add_expense"/>



            </LinearLayout>


        </LinearLayout>




    </android.support.v7.widget.CardView>








</RelativeLayout>