<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_below="@+id/title"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"

        app:ignore="NamespaceTypo"
        card_view:cardUseCompatPadding="true">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Select_Supplier" />

            <AutoCompleteTextView
                android:id="@+id/suplierName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:maxLines="1"
                android:fontFamily="@font/montserrat"
                android:imeOptions="flagNoExtractUi"
                android:hint="Supplier Name">

            </AutoCompleteTextView>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/payment_mode_radio"
                android:orientation="horizontal">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cash"
                    android:fontFamily="@font/montserrat"
                    android:text="Cash"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:id="@+id/credit"
                    android:text="Credit"/>


            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/purchase_date"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:background="@color/white_button"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/date_of_purchase"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:id="@+id/description"
                android:hint="@string/description"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:id="@+id/amount"
                android:fontFamily="@font/montserrat"
                android:hint="@string/amount"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:id="@+id/paid_amount"
                android:fontFamily="@font/montserrat"
                android:hint="@string/paid_amount"/>




        </LinearLayout>




    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white_button"
            android:text="Cancel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/add_purchase_details"
            android:background="@color/white_button"
            android:text="Add purchase"/>



    </LinearLayout>


</RelativeLayout>