<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_relative">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_pic"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_account_circle_black_24dp"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/name_pic"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/supplier_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/Suplier_name"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>



            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_relative"
                android:layout_below="@+id/name_relative">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_pic"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_location_on_black_24dp"/>



                <android.support.design.widget.TextInputLayout
                android:id="@+id/address_layout"
                android:layout_width="match_parent"
                    android:layout_toRightOf="@+id/address_pic"

                    android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/supplier_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Suplier_address"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:maxLines="2"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contact_relative"
                android:layout_below="@+id/address_relative">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_pic"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_phone_black_24dp"/>


                <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                    android:layout_toRightOf="@+id/contact_pic"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/supplier_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Suplier_contact"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>


            </RelativeLayout>


            <Button
                android:id="@+id/add_supplier_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact_relative"
                android:background="@color/colorPrimaryDark"
                android:text="@string/Add_buton" />


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>